@@ -32,6 +32,8 @@ Changes:
 
 * Add ``.tox/`` to default excludes. (Issue #335)
 
+* Allow spaces around the equals sign in an annotated function. (Issue #357)
+
 Bug fixes:
 
 * Don't crash if Checker.build_tokens_line() returns None. (Issue #306)
